php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37764 Strict Standards ReflectionMethod::export()
Submitted: 2006-06-09 13:26 UTC Modified: 2006-06-10 00:46 UTC
From: RQuadling at GMail dot com Assigned: bjori (profile)
Status: Closed Package: Unknown/Other Function
PHP Version: 5_2, 6 OS: *
Private report: No CVE-ID: None
 [2006-06-09 13:26 UTC] RQuadling at GMail dot com
Description:
------------
Using the latest win32 snap - PHP 5.2.0-dev (cli) (built: Jun  9 2006 12:19:10) and at the command line ...

Getting errors when error_reporting is set to 

E_ALL|E_STRICT

If I remove |E_STRICT I don't get the errors.

Reproduce code:
---------------
php -v

Expected result:
----------------
PHP 5.2.0-dev (cli) (built: Jun  9 2006 12:19:10)
Copyright (c) 1997-2006 The PHP Group
Zend Engine v2.2.0, Copyright (c) 1998-2006 Zend Technologies

Actual result:
--------------
Strict Standards: Declaration of ReflectionMethod::export() should be compatible with that of ReflectionFunction::export() in Unknown on line 0
Strict Standards: Declaration of ReflectionMethod::invoke() should be compatible with that of ReflectionFunction::invoke() in Unknown on line 0
Strict Standards: Declaration of ReflectionMethod::invokeArgs() should be compatible with that of ReflectionFunction::invokeArgs() in Unknown on line 0
PHP 5.2.0-dev (cli) (built: Jun  9 2006 12:19:10)
Copyright (c) 1997-2006 The PHP Group
Zend Engine v2.2.0, Copyright (c) 1998-2006 Zend Technologies

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-06-10 00:46 UTC] bjori@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Jun 15 04:00:01 2026 UTC