Fixed bug #37764 - Created new abstract class, ReflectionFunctionAbstract implementing Reflector - Moved all methods from ReflectionFunction (except export, invoke & invokeArgs) - ReflectionFunction now inherits everything from ReflectionFunctionAbstract     and implements its own export, invoke & invokeArgs methods - ReflectionMethod now extends ReflectionFunctionAbstract and implements     its own export, invoke & invokeArgs methods. - Removed stdClass typehint from ReflectionClass::isInstance - Removed stdClass typehint from ReflectionClass::set/getValue